// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton renders correctly with disabled 1`] = `
<div
  className="button monday-style-split-button kindPrimary monday-style-split-button--kind-primary colorPrimary monday-style-split-button--color-primary disabled monday-style-split-button--disabled"
  data-testid="split-button"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={true}
    className="mainButton monday-style-split-button__main-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation disabled monday-style-button--disabled"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      data-testid="dialog"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={true}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton monday-style-split-button__secondary-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation noSidePadding monday-style-button--no-side-padding disabled monday-style-button--disabled"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with medium dialog padding size 1`] = `
<div
  className="button monday-style-split-button kindPrimary monday-style-split-button--kind-primary colorPrimary monday-style-split-button--color-primary"
  data-testid="split-button"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton monday-style-split-button__main-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      data-testid="dialog"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton monday-style-split-button__secondary-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation noSidePadding monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with only required props 1`] = `
<div
  className="button monday-style-split-button kindPrimary monday-style-split-button--kind-primary colorPrimary monday-style-split-button--color-primary"
  data-testid="split-button"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton monday-style-split-button__main-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      data-testid="dialog"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton monday-style-split-button__secondary-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation noSidePadding monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with secondary position 1`] = `
<div
  className="button monday-style-split-button kindPrimary monday-style-split-button--kind-primary colorPrimary monday-style-split-button--color-primary"
  data-testid="split-button"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton monday-style-split-button__main-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      data-testid="dialog"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton monday-style-split-button__secondary-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation noSidePadding monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with tertiary button 1`] = `
<div
  className="button monday-style-split-button kindTertiary monday-style-split-button--kind-tertiary colorPrimary monday-style-split-button--color-primary"
  data-testid="split-button"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton monday-style-split-button__main-button button monday-style-button sizeMedium monday-style-button--size-medium kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      data-testid="dialog"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton monday-style-split-button__secondary-button button monday-style-button sizeMedium monday-style-button--size-medium kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation noSidePadding monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with zIndex 1`] = `
<div
  className="button monday-style-split-button kindPrimary monday-style-split-button--kind-primary colorPrimary monday-style-split-button--color-primary"
  data-testid="split-button"
  role="button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton monday-style-split-button__main-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary rightFlat monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      data-testid="dialog"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton monday-style-split-button__secondary-button button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary leftFlat monday-style-button--left-flat monday-style-button--prevent-click-animation noSidePadding monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;
